# Ordo

./: .gitignore  CMakeLists.txt  README.md  ordo.config
include/ordo/: child_process_manager.h  command_manager.h  runner_option_wrapper.h  shortcut_manager.h  utils.h  window_manager_policy.h
src/: CMakeLists.txt  child_process_manager.cpp  command_manager.cpp  main.cpp  shortcut_manager.cpp  window_manager_policy.cpp
